feat: Adicionando recurso de abertura de chamado com vídeo, imagem ou documento